Spell check and minor html tweaks

--- a/LukesBlog/Views/Home/About.cshtml
+++ b/LukesBlog/Views/Home/About.cshtml
@@ -5,24 +5,6 @@
 
 
 <div id="container">
-    <h1>About</h1>
-    <div class="content">
-        <img src="~/placeholder.jpg" alt="Good Times" height="100" width="194">
-        <span>
-            This is a work in progress.
-            <br />
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget metus sed felis lobortis gravida. Proin in turpis eu tortor iaculis consectetur. Curabitur malesuada nibh egestas nisl suscipit ultrices. Sed pretium tincidunt odio et faucibus. Fusce laoreet arcu nulla, vitae venenatis velit pharetra vitae. Aliquam finibus nunc nec quam molestie rhoncus. Morbi malesuada lorem non augue laoreet, a eleifend mauris maximus. Sed auctor diam odio, a lobortis nulla egestas ac. Suspendisse diam felis, consectetur ut augue id, pretium tristique nulla. Phasellus lobortis ipsum pellentesque, luctus justo in, ultricies quam. Curabitur ac efficitur arcu, eget consequat mi. Morbi eget dui justo. Proin cursus nisi vel pretium varius. Curabitur luctus justo quis tincidunt tempus. Nulla sit amet dui enim. Morbi id nibh porta, feugiat odio id, aliquet purus.
-            <br>
-            <br>
-            Nullam fermentum neque quis massa tincidunt, ac finibus ipsum semper. Suspendisse id mi gravida, vehicula ante et, sodales risus. Vivamus euismod vulputate metus, a vehicula quam lacinia quis. Aenean ut massa ut velit fringilla tincidunt. Aenean dui purus, tempor vel elit sed, auctor pulvinar mi. Aenean feugiat blandit nunc, in elementum ante mattis in. Curabitur fermentum semper gravida. Praesent ornare blandit semper. Maecenas eget dui ac tellus aliquam feugiat non in sapien.
-            <br>
-            <br>
-            Donec sodales id lacus eget imperdiet. Phasellus odio tortor, maximus ut auctor accumsan, facilisis in elit. Pellentesque vulputate laoreet sagittis. Vivamus lacinia dictum lorem, vitae congue turpis placerat et. Quisque vel enim sit amet felis elementum dictum. Nullam ac gravida sem, a imperdiet risus. Aliquam pretium nisi id arcu mattis, ut imperdiet elit ultrices. Vivamus volutpat semper lectus, et hendrerit metus maximus a. Nulla nibh sapien, auctor a sem non, venenatis cursus ex. Vivamus consectetur varius vehicula. Nam tempus ante dui, sed dignissim dui tincidunt eget. Nullam pretium odio ligula, non pellentesque ipsum suscipit id.
-            <br>
-        </span>
-    </div>
-
-
     <h1>Cv</h1>
     <div class="content">
         <h2>Operational IT Support Coordinator - Voith Industrial Services/Leadec - 09/2014 - Present</h2>
@@ -40,6 +22,24 @@
             <br />Systems automation, data analytics, web development, SSRS reports, MS SQL Server, liaise with software & hardware vendors, software product testing, Install network hardware at height, VMWare.
 
         </span>
+        <br>
+        <br>
+        <br>
+        <h2>Voluntary Technical Support (Yellow Shirt) - Multiplay, I52 Gaming Festival 08/2014 - 06/2014</h2>
+        <br>
+        <h2>Voluntary Retail Assistant - British Heart Foundation 08/2014 - 06/2014</h2>
+        <br>
+        <h2>Charity Fundraiser - Liverpool Home Fundraising	04/2014 - 05/2014</h2>
+        <br>
+        <h2>IT Technician - St-Anselms College 	09/2010 - 04/2011</h2>
+        <br>
+        <h2>IT Support - West Kirby  Learning Centre	05/2010 </h2>
+        <br>
+        <h2>Web Dev/Graphics Artist/Technician - Media Manufacturing Services Ltd	2005-2009</h2>
+        <br>
+        <p>
+            You can request a full CV by contacting me.
+        </p>
     </div>
 
 </div>
