--- a/LukesBlog/Views/Home/Projects.cshtml
+++ b/LukesBlog/Views/Home/Projects.cshtml
@@ -9,24 +9,24 @@
     <div class="content">
         <h2>Marshalling Bank Calc System - Leadec</h2>
         <br>
-        <p>Tech Used: <br>ASP.NET C#, ElasticSearch, Bootstrap, HTML5, JS</p>
+        <p>Tech Used: <br>ASP.NET C#, ELK Stack, Bootstrap, HTML5, JS, IIS, SQL, SSIS</p>
         <span>
             <br>
             Operations team required a visualisation of their banks for longest time and our third party software vendor were unable to provide this due to work load.
             <br>
             <br>
-            I investigated how hard it would be to create visualisations with JS Librarys such as D3.js, 
-            ChartJS these seemed doable but would have taken quite significant ammount of time to produce.
+            I investigated how hard it would be to create visualisations with JS Library’s such as D3.js, 
+            ChartJS these seemed doable but would have taken quite significant amount of time to produce.
             I came across ElasticSearch and Kibana, which simplified the creation of visualisations that 
             potentially even the operations team could create them. 
             <br>
             <br>
             I created a few prototype graphs beats packages and showed them to my manager when we came up
-            with the idea to create a web hub to access our diffrent networked services from one location.
-            and we included kibana dashboards emedded in the intranet project for the inital version.
+            with the idea to create a web hub to access our different networked services from one location.
+            and we included Kibana dashboards emedded in the intranet project for the initial version.
             <br>
             <br>
-            This worked extremely well and management have been pleased with the proffesionalism of the 
+            This worked extremely well and management have been pleased with the professionalism of the 
             charts. 
             <br>
         </span>
@@ -52,8 +52,8 @@
 
         <span>
             <br>
-            Website you are looking at right now initally started out as a simple project just
-            using Jade (Now called pug), SCSS I initally planned it to use flask backend but
+            Website you are looking at right now initially started out as a simple project just
+            using Jade (Now called pug), SCSS I initially planned it to use flask backend but
             started hearing a lot of good things about NodeJS so I made the project with backend
             using NodeJS.
             <br>
@@ -61,13 +61,13 @@
             I tried to upgrade the project to a React project but had to cut this short fairly
             quickly due to work projects which I wanted to give 110% on them.
             <br>
-            Those projects have recently come to a completetion so I've picked it up again and
+            Those projects have recently come to a completion so I've picked it up again and
             since one of the projects I had worked on for work was using ASP.NET I decided to
             convert project to ASP.NET.
             <br>
             <br>
-            A goal of the inital version of the website was to use no CSS framework and no
-            JS librarys. I think next version of this will include a CSS framework and in
+            A goal of the initial version of the website was to use no CSS framework and no
+            JS library’s. I think next version of this will include a CSS framework and in
             I can see myself using a JS framework.
             <br>
         </span>
@@ -101,10 +101,10 @@ LastWriteTime, `
                 </code>
 
                 <br>
-                Get-MAS script was one of my most useful scripts as an OSC at Leadec our this
-                was created before we had a database setup there and people would ask use where
-                was Chassis X between and and this would list files in that datastore and get
-                their CSN-ID, Sender2ID, SONO and Path and create a similiar output to a
+                Get-MAS script was one of my most useful scripts as an OSC at Leadec, this
+                was created before we had a database setup there. Operations would ask us where
+                was Chassis X between and this script would list files in that datastore and get
+                their CSN-ID, Sender2ID, SONO and Path and create a similar output to a
                 Get-ChildItem but with this additional information. This became a pivotal script
                 to other scripts created later on.
                 <br>
@@ -184,7 +184,7 @@ function SSRS-Report-OutputPDF([string]$param1Name, [string]$param1Value, [strin
             </code>
 
             <br>
-            This script was adaptered from a script that I found on stackoverflow which I
+            This script was adapted from a script that I found on stackoverflow which I
             only changed a little but created an additional script which processed the output.
             <br>
             <br>
@@ -477,8 +477,8 @@ catch
                 </code>
 
                 <br>
-                poshArc script I initally made and never thought about again but looking back it
-                was a script that made once didnt need any changes too it really and worked perfectly.
+                poshArc script I initially made and never thought about again but looking back it
+                was a script that made once didn’t need any changes too it really and worked perfectly.
                 It was quite simple just moving files into date file structure to archive files away.
                 <br>
                 <br>
@@ -653,7 +653,7 @@ VoithSILSLib.OutputErrors(errors,errorlog,dirlist)
             </code>
 
             <br>
-            This script is essentialy same as the poshArc above but made in python it did have
+            This script is essentially same as the poshArc above but made in python it did have
             the benefit that it produced a CSV file of the files it moved. This was quite early
             in my scripting learning days so functions are fairly large to what I would like to
             these days.
@@ -968,10 +968,10 @@ logging.info("end\n\n")
 
             <br>
             I think this is one of the first scripts I put into production and I think
-            this was hugely underated by management how much this saved the business.
-            When I joined Voith the third party software vendor would miss sequence 
+            this was hugely underrated by management how much this saved the business.
+            When I joined Voith the third-party software vendor would miss sequence 
             orders in the system (it would order them correctly to the spec they were
-            given) but that was not what was needed. So for a longest period this script
+            given) but that was not what was needed. So, for the longest period this script
             run to ensure the sequence of orders going into the system. I believed saved
             the business in the hundreds of thousands of pounds in downtime.
         <br>
