--- a/LukesBlog/Views/Shared/_Layout.cshtml
+++ b/LukesBlog/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
             <div class="back_bar"></div>
             <ul class="menu">
                 <li id="blog" class="active">@Html.ActionLink("Blog","Index","Home")</li>
-                <li id="about">             @Html.ActionLink("About", "About", "Home")</li>
+                <li id="about">             @Html.ActionLink("CV", "About", "Home")</li>
                 <li id="cv">                @Html.ActionLink("Pictures", "Pictures", "Home")</li>
                 <li id="projects">          @Html.ActionLink("Projects", "Projects", "Home")</li>
                 <li id="praise">            @Html.ActionLink("Praise", "Praise", "Home")</li>
