--- a/LukesBlog/Views/Shared/_Layout.cshtml
+++ b/LukesBlog/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/png" href="~/favicon.ico">
     <link href="~/Content/styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
     <title>Luke IT Professional</title>
