added imgs for blog

--- a/LukesBlog/Views/Home/Index.cshtml
+++ b/LukesBlog/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="content">
-            <img src="~/placeholder.jpg" alt="Good Times" height="100" width="194"><span>
+            <img src="~/Content/pictures/data.jpg" alt="Good Times" height="100" width="194"><span>
             ChesterDevs Meetup was interesting meetup as it was largest meetup I've been 
             too yet it had 60 registered attendees, previous meetups I've been too have 
             only been in the 5-20 attendees.             
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="content">
-            <img src="~/placeholder.jpg" alt="Good Times" height="100" width="194" class="rightimg">
+            <img src="~/Content/pictures/debug.jpg" alt="Good Times" height="100" width="194" class="rightimg">
             <span>
             This was an hilarious meetup session hosted by Paul Davies and Joe Timmins 
             doing a live coding session of Kotlin a language the 2 hosts haven't touched 
@@ -153,7 +153,7 @@
             </div>
         </div>
         <div class="content">
-            <img src="~/placeholder.jpg" alt="Good Times" height="100" width="194">
+            <img src="~/Content/pictures/network.jpg" alt="Good Times" height="100" width="194">
             <span>
             Hurray! My website is up surprised at how quick it was to get going with 
             Azure I've been putting this off for some time and so glad I have finally 
