Added SemanticUI-Icons and added code-migrations and connectionstrings

--- a/LukesBlog/Views/Home/Projects.cshtml
+++ b/LukesBlog/Views/Home/Projects.cshtml
@@ -47,8 +47,11 @@
     </div>
     <div class="content">
         <h2>Personal Website</h2>
+        <a href="https://github.com/monkh/LukesBlog" class="circular ui right blue basic mini icon button">
+            <i class="github large icon"></i>
+        </a> 
         <br>
-        <p>Tech Used: <br>ASP.NET C#, HTML5, JS</p>
+        <p>Tech Used: <br>ASP.NET C#, HTML5, JS, Azure</p> 
 
         <span>
             <br>
