--- a/LukesBlog/Views/Shared/_Layout.cshtml
+++ b/LukesBlog/Views/Shared/_Layout.cshtml
@@ -7,6 +7,11 @@
     <link href="~/Content/styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
     <title>Luke IT Professional</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css">
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+
+
 </head>
 
 <body>
@@ -82,8 +87,14 @@
         
     </section>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    @*<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>*@
     <script type="text/javascript" src="~/Scripts/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.13/semantic.min.js"></script>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
+
+
 </body>
 
 </html>
