--- a/LukesBlog/Views/Home/Index.cshtml
+++ b/LukesBlog/Views/Home/Index.cshtml
@@ -1,181 +1,15 @@
-﻿@{
+﻿@model IEnumerable<LukesBlog.DataAccessLayer.Models.BlogPost>
+
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div id="container">
-    <div class="post">
-        <h1>Chester Devs Meetup</h1>
-        <div class="details">
-            <div class="tinygraphic">
-                <svg width="30" height="5">
-                    <rect width="30" height="5"></rect>
-                        Sorry, your browser does not support inline SVG.
-                </svg>
-            </div>
-            <div class="date">15th SEPT 2017</div>
-            <div class="tags">
-                <svg width="10" height="10">
-                    <circle cx="5" cy="5" r="4" />
-                    Sorry, your browser does not support inline SVG.
-                </svg>
-                <div class="tag1">L-Talks </div>
-                <svg width="10" height="10">
-                    <circle cx="5" cy="5" r="4" />
-                    Sorry, your browser does not support inline SVG.
-                </svg>
-                <div class="tag2">ChesterDevs </div>
-                <svg width="10" height="10">
-                    <circle cx="5" cy="5" r="4" />
-                    Sorry, your browser does not support inline SVG.
-                </svg>
-                <div class="tag3">Meetup </div>
-            </div>
-            <div class="tinygraphic">
-                <svg width="30" height="5">
-                    <rect width="30" height="5"></rect>
-                        Sorry, your browser does not support inline SVG.
-                </svg>
-            </div>
-        </div>
-        <div class="content">
-            <img src="~/Content/pictures/data.jpg" alt="Good Times" height="100" width="194"><span>
-            ChesterDevs Meetup was interesting meetup as it was largest meetup I've been 
-            too yet it had 60 registered attendees, previous meetups I've been too have 
-            only been in the 5-20 attendees.             
-            <br>
-            <br>
-            It was a bunch of lightening talks all interesting in their own right, Andrews 
-            gave a great talk on cognitive bias was insightful I've been brought up to be 
-            mindful of having a cognitive bias so this was definitely my favourite talk of 
-            the evening.             
-            <br>
-            <br>
-            I didn't make note of the presenter’s name but it was someone from @@sykesdev 
-            who gave another great talk on multitasking presenter was focused on a 
-            developers point of view and was saying multitasking is always negative but 
-            this was turned around in the Q&A afterwards where someone pointed out in a 
-            management role good multitasking can be beneficial but it was still a good 
-            talk none the less. 
-            <br>
-            </span>
-            @*<a href="#" class="readme">Read More...</a>*@
-        </div>
-    </div>
-    <div class="post">
-        <h1>GDG Kotlin TDD Meetup</h1>
-        <div class="details">
-            <div class="tinygraphic">
-                <svg width="30" height="5">
-                    <rect width="30" height="5"></rect>
-                        Sorry, your browser does not support inline SVG.
-                </svg>
-            </div>
-            <div class="date">15th SEPT 2017</div>
-            <div class="tags">
-                <svg width="10" height="10">
-                    <circle cx="5" cy="5" r="4" />
-                    Sorry, your browser does not support inline SVG.
-                </svg>
-                <div class="tag1">TDD </div>
-                <svg width="10" height="10">
-                    <circle cx="5" cy="5" r="4" />
-                    Sorry, your browser does not support inline SVG.
-                </svg>
-                <div class="tag2">GDG </div>
-                <svg width="10" height="10">
-                    <circle cx="5" cy="5" r="4" />
-                    Sorry, your browser does not support inline SVG.
-                </svg>
-                <div class="tag3">Kotlin </div>
-            </div>
-            <div class="tinygraphic">
-                <svg width="30" height="5">
-                    <rect width="30" height="5"></rect>
-                        Sorry, your browser does not support inline SVG.
-                </svg>
-            </div>
-        </div>
-        <div class="content">
-            <img src="~/Content/pictures/debug.jpg" alt="Good Times" height="100" width="194" class="rightimg">
-            <span>
-            This was an hilarious meetup session hosted by Paul Davies and Joe Timmins 
-            doing a live coding session of Kotlin a language the 2 hosts haven't touched 
-            before attempting to create a 10-pin bowling app. Straight off the get go 
-            they hit a snag but due to their lightheartedness and humour kept environment 
-            fun and encouraged group interaction.             
-            <br>
-            <br>
-            I've been a hobbyist scripter/programmer for some time and it was interesting 
-            to see a pair of senior programmers learn a new language. I think this would 
-            make an entertaining Youtube series a pair of senior software engineers learning 
-            a new language if presented in a humours way.             
-            <br>
-            <br>
-            The next GDG (Google Developer Group) meetup is on 28th September and is talking 
-            about Amazon Fire TV and Alexa.             
-            <br>
-            </span>
-            @*<a href="#" class="readme">Read More...</a>*@
-        </div>
-    </div>
-    <div class="post">
-        <h1>Blogs up!</h1>
-        <div class="details">
-            <div class="tinygraphic">
-                <svg width="30" height="5">
-                    <rect width="30" height="5"></rect>
-                        Sorry, your browser does not support inline SVG.
-                </svg>
-            </div>
-            <div class="date">15th SEPT 2017</div>
-            <div class="tags">
-                <svg width="10" height="10">
-                    <circle cx="5" cy="5" r="4" />
-                    Sorry, your browser does not support inline SVG.
-                </svg>
-                <div class="tag1">Azure </div>
-                <svg width="10" height="10">
-                    <circle cx="5" cy="5" r="4" />
-                    Sorry, your browser does not support inline SVG.
-                </svg>
-                <div class="tag2">Live </div>
-                <svg width="10" height="10">
-                    <circle cx="5" cy="5" r="4" />
-                    Sorry, your browser does not support inline SVG.
-                </svg>
-                <div class="tag3">Blog </div>
-            </div>
-            <div class="tinygraphic">
-                <svg width="30" height="5">
-                    <rect width="30" height="5"></rect>
-                        Sorry, your browser does not support inline SVG.
-                </svg>
-            </div>
-        </div>
-        <div class="content">
-            <img src="~/Content/pictures/network.jpg" alt="Good Times" height="100" width="194">
-            <span>
-            Hurray! My website is up surprised at how quick it was to get going with 
-            Azure I've been putting this off for some time and so glad I have finally 
-            got around to finishing off this website and finally uploading it. The 
-            kinds of posts you can expect on here are sort of reviews of talks I attend 
-            I've been attending a lot of meet ups lately and there have been some great 
-            ones, for example Gary Prety gave a great talk on Microsoft’s AI chatbot 
-            framework in Liverpool.             
-            <br>
-            <br>
-            Still a few things to tidy for first version and I'm going to upgrade it in 
-            the coming weeks as its very static at the moment but that’s alright for the 
-            first version.             
-            <br>
-            <br>
-            In the future, I'm hoping to add comments section for blog area, at the moment 
-            I am trying to decide if I should implement an existing CMS or just create a 
-            simple one for the experience. Also, I need to add github links for my projects 
-            then going bit further into the future add a chatbot just for fun.             
-            <br>
-            </span>
-            @*<a href="#" class="readme">Read More...</a>*@
-        </div>
-    </div>
+
+    @foreach(var item in Model)
+    {
+        @Html.Raw(item.ToHTMLBlogPost());
+    }
+
 </div>
+
