--- a/LukesBlog/Views/Shared/_Layout.cshtml
+++ b/LukesBlog/Views/Shared/_Layout.cshtml
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
     <title>Luke IT Professional</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -33,7 +36,7 @@
             </div>
         </div>
         <h1>Luke's Blog</h1>
-        <nav id="ui fixed top menu sticky nav_bar ">
+        <nav id="nav_bar ">
             <div class="bar"></div>
             <div class="back_bar"></div>
             <ul class="menu">
@@ -89,7 +92,7 @@
 
     @*<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>*@
     <script type="text/javascript" src="~/Scripts/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.13/semantic.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
