--- a/LukesBlog/Views/Home/Projects.cshtml
+++ b/LukesBlog/Views/Home/Projects.cshtml
@@ -30,7 +30,7 @@
             charts. 
             <br>
         </span>
-        <div class="gallery">
+        @*<div class="gallery">
             <div class="pic">
                 <p class="label">An example of a modal</p>
                 <img src="~/Content/images/marshalexample1.png" alt="An example of a modal" />
@@ -43,7 +43,7 @@
                 <p class="label">An example dashboard</p>
                 <img src="~/Content/images/marshalexample3.png" alt="An example dashboard" />
             </div>
-        </div>
+        </div>*@
     </div>
     <div class="content">
         <h2>Personal Website</h2>
