--- a/LukesBlog/Views/BlogPosts/Create.cshtml
+++ b/LukesBlog/Views/BlogPosts/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container">
+<div class="lvcontainer">
     <h1>Create BlogPost</h1>
     <br>
 
