--- a/LukesBlog/Views/Home/About.cshtml
+++ b/LukesBlog/Views/Home/About.cshtml
@@ -4,9 +4,9 @@
 
 
 
-<div id="container">
+<div id="lvcontainer">
     <h1>Cv</h1>
-    <div class="content">
+    <div class="lvcontent">
         <h2>Operational IT Support Coordinator - Voith Industrial Services/Leadec - 09/2014 - Present</h2>
         <span>
             <br />- Diagnosing networking issues such as, duplicate IP’s, DHCP scoping issues and Wi-Fi configuration optimisations needed.
