--- a/LukesBlog/Views/Home/Contact.cshtml
+++ b/LukesBlog/Views/Home/Contact.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "Contact";
 }
 
-<div id="container">
+<div id="lvcontainer">
     <h1>Contact</h1>
-    <div class="content">
+    <div class="lvcontent">
         <span>
             You can contact me at <a href="https://twitter.com/daedenlv">@@daedenlv</a> at twitter.
         </span>
