--- a/LukesBlog/Views/Home/Pictures.cshtml
+++ b/LukesBlog/Views/Home/Pictures.cshtml
@@ -2,10 +2,10 @@
     ViewBag.Title = "Pictures";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div id="container">
+<div id="lvcontainer">
     <h1>Pictures</h1>
     <br>
-    <div class="content">
+    <div class="lvcontent">
         <span>
             You can view Pictures from my Mexico trip, Snowdon and Scarfell hikes <a href="https://1drv.ms/f/s!Alausfg9Uy5GhcJGqoob2JCP5AcAtg">here</a>
         </span>
