--- a/LukesBlog/Views/Home/Projects.cshtml
+++ b/LukesBlog/Views/Home/Projects.cshtml
@@ -4,9 +4,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div id="container">
+<div id="lvcontainer">
     <h1>Projects</h1>
-    <div class="content">
+    <div class="lvcontent">
         <h2>Marshalling Bank Calc System - Leadec</h2>
         <br>
         <p>Tech Used: <br>ASP.NET C#, ELK Stack, Bootstrap, HTML5, JS, IIS, SQL, SSIS</p>
@@ -45,7 +45,7 @@
             </div>
         </div>*@
     </div>
-    <div class="content">
+    <div class="lvcontent">
         <h2>Personal Website</h2>
         <a href="https://github.com/monkh/LukesBlog" class="circular ui right blue basic mini icon button">
             <i class="github large icon"></i>
@@ -76,10 +76,10 @@
         </span>
     </div>
 
-    <div class="content">
+    <div class="lvcontent">
         <h2>Powershell Projects</h2>
         <br>
-        <div class="content">
+        <div class="lvcontent">
             <h3>Get-MAS.ps1</h3>
             <br>
             <code>
@@ -114,7 +114,7 @@ LastWriteTime, `
                 <br>
         </div>
 
-        <div class="content">
+        <div class="lvcontent">
             <h3>AutoReports</h3>
 
             <br>
@@ -498,10 +498,10 @@ catch
 
 
 
-    <div class="content">
+    <div class="lvcontent">
         <h2>Python Projects</h2>
         <br>
-        <div class="content">
+        <div class="lvcontent">
             <h3>pyArc.py</h3>
             <br>
             <code>
