--- a/LukesBlog/Views/Shared/_Layout.cshtml
+++ b/LukesBlog/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                 <li id="about" class="@(ViewContext.RouteData.Values["Action"].ToString() == "About" ? "active" : "")">             @Html.ActionLink("CV", "About", "Home")</li>
                 <li id="cv" class="@(ViewContext.RouteData.Values["Action"].ToString() == "Pictures" ? "active" : "")">             @Html.ActionLink("Pictures", "Pictures", "Home")</li>
                 <li id="projects" class="@(ViewContext.RouteData.Values["Action"].ToString() == "Projects" ? "active" : "")">       @Html.ActionLink("Projects", "Projects", "Home")</li>
-                <li id="praise" class="@(ViewContext.RouteData.Values["Action"].ToString() == "Praise" ? "active" : "")">           @Html.ActionLink("Praise", "Praise", "Home")</li>
+                <li id="praise" class="@(ViewContext.RouteData.Values["Action"].ToString() == "Skills" ? "active" : "")">           @Html.ActionLink("Skills", "Skills", "Home")</li>
                 <li id="contact" class="@(ViewContext.RouteData.Values["Action"].ToString() == "Contact" ? "active" : "")">         @Html.ActionLink("Contact", "Contact", "Home")</li>
             </ul>
         </nav>
