--- a/LukesBlog/Views/BlogPosts/Index.cshtml
+++ b/LukesBlog/Views/BlogPosts/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="container">
+<div class="lvcontainer">
     <h2>Index</h2>
 
     <p>
