added click info message to skills page

--- a/LukesBlog/Views/Home/Skills.cshtml
+++ b/LukesBlog/Views/Home/Skills.cshtml
@@ -6,6 +6,8 @@
 
 <div id="lvcontainer">
     <h1>Skills</h1>
+
+    Click blue arrows for more info.
     <div class="lvcontent ui container">
         <table class="ui very basic fixed large table">
             <thead>
